--- a/src/Sticky.less
+++ b/src/Sticky.less
@@ -9,6 +9,8 @@
 @__sticky-prefix-cls: uxcore-sticky;
 
 .@{__sticky-prefix-cls} {
+  background: #fff;
+  z-index: 999;
   .@{__sticky-prefix-cls}-placeholder {
     display: none;
     &.sticky {
